--- a/Foodie/User/User.Master
+++ b/Foodie/User/User.Master
@@ -22,7 +22,8 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <!-- Include SweetAlert CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
-    <!-- bootstrap core css -->
+
+     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="../TemplateFiles/css/bootstrap.css" />
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
     <!--owl slider stylesheet -->
@@ -52,42 +53,32 @@
             });
         });
     </script>
+    <style>
+        @keyframes blink {
+            0% {
+                background-color: red;
+            }
 
-  
+            50% {
+                background-color: blue;
+            }
 
+            100% {
+                background-color: red;
+            }
+        }
 
-
-   <style>
-    @keyframes blink {
-        0% { background-color: red; }
-        50% { background-color: blue; }
-        100% { background-color: red; }
-    }
-
-    .blinking-button {
-        animation: blink 1s infinite;
-        color: white; /* Set text color to white */
-        border: none; /* Remove border for better appearance */
-        padding: 10px 20px; /* Add padding for better appearance */
-    }
-</style>
-
-   
-      
-
-
-
-
-
-
-
+        .blinking-button {
+            animation: blink 1s infinite;
+            color: white; /* Set text color to white */
+            border: none; /* Remove border for better appearance */
+            padding: 10px 20px; /* Add padding for better appearance */
+        }
+    </style>
     <asp:ContentPlaceHolder ID="head" runat="server">
-      
     </asp:ContentPlaceHolder>
 </head>
 <body>
-   
-
     <form id="form1" runat="server">
         <div class="hero_area">
             <div class="bg-box">
@@ -101,12 +92,7 @@
                             <span>ICE CUBE
                             </span>
                         </a>
-                      <asp:Button ID="btnBlinking" runat="server" Text="Festival offer" CssClass="blinking-button" OnClick="btnBlinking_Click" />
-
-                        
-
-
-
+                        <asp:Button ID="btnBlinking" runat="server" Text="Festival offer" CssClass="blinking-button" OnClick="btnBlinking_Click" />
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class=""></span>
                         </button>
@@ -234,12 +220,12 @@
             </header>
             <!-- end header section -->
             <!-- slider section -->
-            
+
             <asp:Panel ID="pnSliderUC" runat="server"></asp:Panel>
             <!-- end slider section -->
         </div>
 
-       
+
         <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
         </asp:ContentPlaceHolder>
 
@@ -252,12 +238,12 @@
                             <h4>Contact Us
                             </h4>
                             <div class="contact_link_box">
-                                <a href="">
+                                <a href="#">
                                     <i class="fa fa-map-marker" aria-hidden="true"></i>
                                     <span>Location
                                     </span>
                                 </a>
-                                <a href="">
+                                <a href="#">
                                     <i class="fa fa-phone" aria-hidden="true"></i>
                                     <span>Call +91 9578305599
                                     </span>
@@ -284,9 +270,7 @@
                                 <a href="">
                                     <i class="fa fa-twitter" aria-hidden="true"></i>
                                 </a>
-                                <%--<a href="">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-              </a>--%>
+                              
                                 <a href="https://www.instagram.com/icecuberestrocafe?igsh=MzRlODBiNWFlZA==">
                                     <i class="fa fa-instagram" aria-hidden="true"></i>
                                 </a>
@@ -318,15 +302,12 @@
                 </div>
             </div>
         </footer>
-
         <!-- footer section -->
-
     </form>
-    
-    <script defer src="https://app.fastbots.ai/embed.js" data-bot-id="cltilyz5b00eus9b1w4wkd4j4"></script>
 
-    <%--   -- <!-- jQery -->
-  <script src="../TemplateFiles/js/jquery-3.4.1.min.js"></script>--%>
+    <script defer src="https://app.fastbots.ai/embed.js" data-bot-id="cltilyz5b00eus9b1w4wkd4j4"></script>
+    <!-- jQery -->
+    <script src="../TemplateFiles/js/jquery-3.4.1.min.js"></script>
     <!-- popper js -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
     </script>
@@ -345,8 +326,5 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
     </script>
     <!-- End Google Map -->
-
-    
-  
 </body>
 </html>
